# compound

./: All_Investments_view(1).csv  All_Investments_view.csv  All_Investments_view_source  Cargo.toml
src/: compound_investment.rs  investment.rs  main.rs  potential.rs  raw_investment.rs
tests/: potential_tests.rs
