[package]
name = "compound"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
fs = "0.0.5"
serde = { version = "1.0.195", features = ["derive"] }

[[bin]]
name = "compound"
path = "src/main.rs"
